Wrap fixed
git-svn-id: https://plugins.svn.wordpress.org/pluscaptcha/trunk@936235 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -203,12 +203,6 @@ span.error {
 		/**/
 		font-size: 14px;
 	}
-	.wrap{
-		width: 960px;
-		padding: 0 0 30px 50px;
-		color: white;
-		margin: auto;
-	}
 	label {
 		text-shadow: none;
 		color: white;
